--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ layout: default
 ---
 <div class="home">
 	<section class="site-header">
-		<h1 class="smallcap"><a class="site-title" href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title }}</a></h1>
+		<h1 class="smallcap"><a class="site-title" href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">
+			Anthony Liriano
+		</a></h1>
 		{% include nav.html %}
 		{% include intro.html %}
 	</section>
